--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website with Map Header</title>
+  <title>Mapping</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
@@ -116,9 +116,7 @@
   <div class="navbar">
     <nav>
       <ul>
-        <li><a href="#"><span>&#8592;</span></a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Homepage</a></li>
+        <li><a href="https://milkycreator.github.io/homepage/#">Homepage</a></li>
       </ul>
     </nav>
   </div>
